// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates some code: MySQL flavored 1`] = `
"/**
 * Insert a single User into the database, returning the inserted ID
 */
export async function insertUser(
  input: UserInput,
  connection = getDatabaseConnection()
): Promise<string> {
  const result = await RawUsers(connection).insert(input);
  return result[0];
};

/** Find many Users in the database by a constraint function */
export async function findUsers(
  query: (query: knex.QueryBuilder<RawUser, RawUser[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<User[]> {
  const queryBuilder = RawUsers(connection);
  await query(queryBuilder);
  const results = await queryBuilder;
  return results.map((rawEntity) => rawUserToUser(rawEntity));
};

/** Find a User in the database or fail */
export async function findUserOrFail(
  query: (query: knex.QueryBuilder<RawUser, RawUser[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<User> {
  const queryBuilder = RawUsers(connection);
  await query(queryBuilder);
  queryBuilder.limit(1);
  const results = await queryBuilder;
  if(results.length === 0) {
    throw new Error(\\"Error! Unable to find User in findUserOrFail call\\");
  }
  return rawUserToUser(results[0])
};

/** Update a single User */
export async function updateUser(
  entity: UserInput,
  connection = getDatabaseConnection()
): Promise<void> {
  const {id, ...rawInput} = userToRawUser(entity);
  await RawUsers(connection)
    .update(rawInput)
    .where(\\"id\\", \\"=\\", entity.id)
    .limit(1);
}

/** Update one or more Users under specific conditions */
export async function updateUserWhere(
  updatePayload: UserInput,
  query: (query: knex.QueryBuilder<RawUser, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<void> {
  const rawUpdatePayload = userToRawUser(updatePayload);
  const queryBuilder = RawUsers(connection).update(rawUpdatePayload);
  await query(queryBuilder);
  await queryBuilder;
}

/** Deletes a User */
export async function deleteUser(
  entity: User,
  connection = getDatabaseConnection()
): Promise<number> {
  return RawUsers<number>(connection)
    .where(\\"id\\", \\"=\\", entity.id)
    .delete()
    .limit(1);
}

/** Delete one or more Users under specific conditions */
export async function deleteUserWhere(
  query: (query: knex.QueryBuilder<RawUser, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<number> {
  const queryBuilder = RawUsers<number>(connection);
  await query(queryBuilder);
  queryBuilder.delete();
  return queryBuilder;
}

/**
 * Insert a single UserAccount into the database, returning the inserted ID
 */
export async function insertUserAccount(
  input: UserAccountInput,
  connection = getDatabaseConnection()
): Promise<string> {
  const result = await RawUserAccounts(connection).insert(input);
  return result[0];
};

/** Find many UserAccounts in the database by a constraint function */
export async function findUserAccounts(
  query: (query: knex.QueryBuilder<RawUserAccount, RawUserAccount[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<UserAccount[]> {
  const queryBuilder = RawUserAccounts(connection);
  await query(queryBuilder);
  const results = await queryBuilder;
  return results.map((rawEntity) => rawUserAccountToUserAccount(rawEntity));
};

/** Find a UserAccount in the database or fail */
export async function findUserAccountOrFail(
  query: (query: knex.QueryBuilder<RawUserAccount, RawUserAccount[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<UserAccount> {
  const queryBuilder = RawUserAccounts(connection);
  await query(queryBuilder);
  queryBuilder.limit(1);
  const results = await queryBuilder;
  if(results.length === 0) {
    throw new Error(\\"Error! Unable to find UserAccount in findUserAccountOrFail call\\");
  }
  return rawUserAccountToUserAccount(results[0])
};

/** Update a single UserAccount */
export async function updateUserAccount(
  entity: UserAccountInput,
  connection = getDatabaseConnection()
): Promise<void> {
  const {id, ...rawInput} = userAccountToRawUserAccount(entity);
  await RawUserAccounts(connection)
    .update(rawInput)
    .where(\\"id\\", \\"=\\", entity.id)
    .limit(1);
}

/** Update one or more UserAccounts under specific conditions */
export async function updateUserAccountWhere(
  updatePayload: UserAccountInput,
  query: (query: knex.QueryBuilder<RawUserAccount, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<void> {
  const rawUpdatePayload = userAccountToRawUserAccount(updatePayload);
  const queryBuilder = RawUserAccounts(connection).update(rawUpdatePayload);
  await query(queryBuilder);
  await queryBuilder;
}

/** Deletes a UserAccount */
export async function deleteUserAccount(
  entity: UserAccount,
  connection = getDatabaseConnection()
): Promise<number> {
  return RawUserAccounts<number>(connection)
    .where(\\"id\\", \\"=\\", entity.id)
    .delete()
    .limit(1);
}

/** Delete one or more UserAccounts under specific conditions */
export async function deleteUserAccountWhere(
  query: (query: knex.QueryBuilder<RawUserAccount, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<number> {
  const queryBuilder = RawUserAccounts<number>(connection);
  await query(queryBuilder);
  queryBuilder.delete();
  return queryBuilder;
}

"
`;

exports[`generates some code: PG flavored 1`] = `
"/**
 * Insert a single User into the database, returning the inserted entity
 */
export async function insertUser(
  input: UserInput,
  connection = getDatabaseConnection()
): Promise<User> {
  const rawInput = userToRawUser(input);
  const result = await RawUsers(connection).insert(rawInput).returning(\\"*\\");
  return rawUserToUser(result[0]);
};

/** Find many Users in the database by a constraint function */
export async function findUsers(
  query: (query: knex.QueryBuilder<RawUser, RawUser[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<User[]> {
  const queryBuilder = RawUsers(connection);
  await query(queryBuilder);
  const results = await queryBuilder;
  return results.map((rawEntity) => rawUserToUser(rawEntity));
};

/** Find a User in the database or fail */
export async function findUserOrFail(
  query: (query: knex.QueryBuilder<RawUser, RawUser[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<User> {
  const queryBuilder = RawUsers(connection);
  await query(queryBuilder);
  queryBuilder.limit(1);
  const results = await queryBuilder;
  if(results.length === 0) {
    throw new Error(\\"Error! Unable to find User in findUserOrFail call\\");
  }
  return rawUserToUser(results[0])
};

/** Update a single User */
export async function updateUser(
  entity: UserInput,
  connection = getDatabaseConnection()
): Promise<void> {
  const {id, ...rawInput} = userToRawUser(entity);
  await RawUsers(connection)
    .update(rawInput)
    .where(\\"id\\", \\"=\\", entity.id)
    .limit(1);
}

/** Update one or more Users under specific conditions */
export async function updateUserWhere(
  updatePayload: UserInput,
  query: (query: knex.QueryBuilder<RawUser, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<void> {
  const rawUpdatePayload = userToRawUser(updatePayload);
  const queryBuilder = RawUsers(connection).update(rawUpdatePayload);
  await query(queryBuilder);
  await queryBuilder;
}

/** Deletes a User */
export async function deleteUser(
  entity: User,
  connection = getDatabaseConnection()
): Promise<number> {
  return RawUsers<number>(connection)
    .where(\\"id\\", \\"=\\", entity.id)
    .delete()
    .limit(1);
}

/** Delete one or more Users under specific conditions */
export async function deleteUserWhere(
  query: (query: knex.QueryBuilder<RawUser, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<number> {
  const queryBuilder = RawUsers<number>(connection);
  await query(queryBuilder);
  queryBuilder.delete();
  return queryBuilder;
}

/**
 * Insert a single UserAccount into the database, returning the inserted entity
 */
export async function insertUserAccount(
  input: UserAccountInput,
  connection = getDatabaseConnection()
): Promise<UserAccount> {
  const rawInput = userAccountToRawUserAccount(input);
  const result = await RawUserAccounts(connection).insert(rawInput).returning(\\"*\\");
  return rawUserAccountToUserAccount(result[0]);
};

/** Find many UserAccounts in the database by a constraint function */
export async function findUserAccounts(
  query: (query: knex.QueryBuilder<RawUserAccount, RawUserAccount[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<UserAccount[]> {
  const queryBuilder = RawUserAccounts(connection);
  await query(queryBuilder);
  const results = await queryBuilder;
  return results.map((rawEntity) => rawUserAccountToUserAccount(rawEntity));
};

/** Find a UserAccount in the database or fail */
export async function findUserAccountOrFail(
  query: (query: knex.QueryBuilder<RawUserAccount, RawUserAccount[]>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<UserAccount> {
  const queryBuilder = RawUserAccounts(connection);
  await query(queryBuilder);
  queryBuilder.limit(1);
  const results = await queryBuilder;
  if(results.length === 0) {
    throw new Error(\\"Error! Unable to find UserAccount in findUserAccountOrFail call\\");
  }
  return rawUserAccountToUserAccount(results[0])
};

/** Update a single UserAccount */
export async function updateUserAccount(
  entity: UserAccountInput,
  connection = getDatabaseConnection()
): Promise<void> {
  const {id, ...rawInput} = userAccountToRawUserAccount(entity);
  await RawUserAccounts(connection)
    .update(rawInput)
    .where(\\"id\\", \\"=\\", entity.id)
    .limit(1);
}

/** Update one or more UserAccounts under specific conditions */
export async function updateUserAccountWhere(
  updatePayload: UserAccountInput,
  query: (query: knex.QueryBuilder<RawUserAccount, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<void> {
  const rawUpdatePayload = userAccountToRawUserAccount(updatePayload);
  const queryBuilder = RawUserAccounts(connection).update(rawUpdatePayload);
  await query(queryBuilder);
  await queryBuilder;
}

/** Deletes a UserAccount */
export async function deleteUserAccount(
  entity: UserAccount,
  connection = getDatabaseConnection()
): Promise<number> {
  return RawUserAccounts<number>(connection)
    .where(\\"id\\", \\"=\\", entity.id)
    .delete()
    .limit(1);
}

/** Delete one or more UserAccounts under specific conditions */
export async function deleteUserAccountWhere(
  query: (query: knex.QueryBuilder<RawUserAccount, number>) => void | Promise<void>,
  connection = getDatabaseConnection()
): Promise<number> {
  const queryBuilder = RawUserAccounts<number>(connection);
  await query(queryBuilder);
  queryBuilder.delete();
  return queryBuilder;
}

"
`;
